structural-typing/tests/ui/modify_invalid_operator_star.stderr
error: Invalid operator '*' in modify!. Valid operators: + (Present), - (Absent), ? (Optional)
  --> tests/ui/modify_invalid_operator_star.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
10 |     type Invalid = user::modify!(user::AllAbsent, *name);
   |                    ------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `user::modify` (in Nightly builds, run with -Z macro-backtrace for more info)
